creating html page content and css styles

--- a/public/assets/mockup/index.html
+++ b/public/assets/mockup/index.html
@@ -52,7 +52,13 @@
               <h1 class="welcome-headline">The place that brings artists and potential buyers together.</h1>
               <p class="about-us">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, totam ratione temporibus explicabo adipisci repellat aperiam alias voluptate soluta. Voluptates veniam incidunt architecto iure fuga placeat facilis provident, odio eius itaque earum exercitationem maiores expedita quaerat adipisci repellendus voluptatibus natus dignissimos ratione. Autem adipisci, omnis recusandae doloribus laboriosam sit vitae soluta, voluptatum veniam quod nihil vel. Suscipit, nihil hic. Impedit quae numquam recusandae molestiae voluptates sapiente maiores tempora.</p>
             </div>
+              <div class="signup-options">
+                <button type="submit" class="artist-signup">Artist Signup</button>
+                <button type="submit" class="buyer-signup">Buyer Signup</button>
+              </div>
+            </div>  
           </div>
+
         </div>
       </main>
       <!-- MAIN CONTENT END -->
