placed html markup into main.handlebars file

--- a/public/assets/mockup/index.html
+++ b/public/assets/mockup/index.html
@@ -12,7 +12,7 @@
       <header class="header-container">
         <div class="nav-container">
           <div class="logo">
-          <a href="/"><img src="/public/assets/images/art-garage-logo.png" alt="art garage logo" class="art-garage-logo"/></a>
+          <a href="/"><img src="../../images/art-garage-logo.png" alt="art garage logo" class="art-garage-logo"/></a>
           </div>
           <nav class="menu">
             <ul class="menu-items">
@@ -36,7 +36,7 @@
             <div class="feature-artist-container">
               <!-- This container holds the img/artwork thumbnail: -->
               <div class="artwork-container">
-                <img class="artwork-image" src="/public/assets/images/painting-sample.jpg" alt="nature oil paiting">
+                <img class="artwork-image" src="../../images/painting-sample.jpg" alt="nature oil paiting">
               </div>
               <!-- This container holds the artist name, short bio snippet and link to profile: -->
               <div class="artist-info">
