placed html markup into main.handlebars file

--- a/public/assets/mockup/index.html
+++ b/public/assets/mockup/index.html
@@ -62,6 +62,9 @@
         </div>
       </main>
       <!-- MAIN CONTENT END -->
+      <footer>
+        Thank you for visiting Art Garage!
+      </footer>
     </div>
 
   </body>
