--- a/public/assets/mockup/dashboard.html
+++ b/public/assets/mockup/dashboard.html
@@ -26,10 +26,9 @@
       </header>
       <!-- HEADING END -->
 
-      
       <div class="dashboard-container">
           <div class="dashboard-heading">
-          <h1 class="dashboard-title">Welcome to the Artist Showcase!</h1>
+          <h1 class="dashboard-title">Welcome to the Artist Showcase Page!</h1>
         <p class="dashboard-text">Click <span class="view-profile-dashboard">View full profile</span> to reveal the full bio of each artist.</p>
         </div>
         <!-- This column holds the artwork thumbnail and artist info container: -->
