placed html markup into new buyer-signup.handlebars file and updated the style.css file

--- a/public/assets/mockup/dashboard.html
+++ b/public/assets/mockup/dashboard.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Art Garage App</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="icon" type="image/x-icon" href="../../images/am52r-bb94x-001.ico">
   </head>
   <body>
 
@@ -29,7 +30,7 @@
       <div class="dashboard-container">
           <div class="dashboard-heading">
           <h1 class="dashboard-title">Welcome to the Artist Showcase Page!</h1>
-        <p class="dashboard-text">Click <span class="view-profile-dashboard">View full profile</span> to reveal the full bio of each artist.</p>
+          <p class="dashboard-text">Click <span class="view-profile-dashboard">View full profile</span> to reveal the full bio of each artist.</p>
         </div>
         <!-- This column holds the artwork thumbnail and artist info container: -->
           <div class="dashboard-artist-column">
