handlebars controllers js

--- a/public/assets/mockup/index.html
+++ b/public/assets/mockup/index.html
@@ -3,18 +3,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Art Garage App</title>
-    <link rel="stylesheet" href="../../style.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="icon" type="image/x-icon" href="../../images/am52r-bb94x-001.ico">
   </head>
   <body>
 
     <div class="wrapper">
-      {{!-- HEADER START --}}
+      <!-- HEADING START -->
       <header class="header-container">
         <div class="nav-container">
           <div class="logo">
           <a href="/"><img src="../../images/art-garage-logo.png" alt="art garage logo" class="art-garage-logo"/></a>
           </div>
-          {{!-- NAV MENU START --}}
           <nav class="menu">
             <ul class="menu-items">
               <li><a href="/">Home</a></li>
@@ -25,20 +25,21 @@
           </nav>
         </div>
       </header>
-      {{!-- HEADER END --}}
+      <!-- HEADING END -->
 
-      {{!-- MAIN CONTENT START --}}
+      <!-- MAIN CONTENT START -->
       <main>
-        {{!-- This container holds both columns: --}}
+        <!-- This container holds both columns: -->
         <div class="content-row-container">
-          {{!-- This column holds the artwork thumbnail and artist info container: --}}
+
+          <!-- This column holds the artwork thumbnail and artist info container: -->
           <div class="artist-column">
             <div class="feature-artist-container">
-              {{!-- This container holds the img/artwork thumbnail: --}}
+              <!-- This container holds the img/artwork thumbnail: -->
               <div class="artwork-container">
                 <img class="artwork-image" src="../../images/painting-sample.jpg" alt="nature oil paiting">
               </div>
-              {{!-- This container holds the artist name, short bio snippet and link to profile: --}}
+              <!-- This container holds the artist name, short bio snippet and link to profile: -->
               <div class="artist-info">
                 <h2 class="artist-name">Jonathan Franklin</h2>
                 <p class="artist-bio">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae, alias consequatur eius facere blanditiis hic, pariatur perspiciatis labore asperiores dolorem beatae repellat earum inventore placeat nobis expedita? Porro ducimus iusto tenetur harum consequatur fugiat.</p>
@@ -46,7 +47,7 @@
               </div>
             </div>
           </div>
-          {{!-- This column holds the website heading, about info and signup options: --}}
+          <!-- This column holds the website heading, about info and signup options: -->
           <div class="welcome-column">
             <div class="intro">
               <h1 class="welcome-headline">The place that brings artists and potential buyers together.</h1>
@@ -61,7 +62,7 @@
 
         </div>
       </main>
-      {{!-- MAIN CONTENT END --}}
+      <!-- MAIN CONTENT END -->
       <footer>
         Thank you for visiting Art Garage!
       </footer>
