placed html markup into new login.handlebars, homepage.handlebars, buyer-signup.handlebars, artist-signup.handlebars and new css styles added

--- a/public/assets/mockup/dashboard.html
+++ b/public/assets/mockup/dashboard.html
@@ -30,7 +30,7 @@
       <div class="dashboard-container">
           <div class="dashboard-heading">
           <h1 class="dashboard-title">Welcome to the Artist Showcase Page!</h1>
-          <p class="dashboard-text">Click <span class="view-profile-dashboard">View full profile</span> to reveal the full bio of each artist.</p>
+          <p class="dashboard-text">Browse through our Artist Showcase and discover some hidden gems.</p>
         </div>
         <!-- This column holds the artwork thumbnail and artist info container: -->
           <div class="dashboard-artist-column">
