--- a/public/assets/mockup/login.html
+++ b/public/assets/mockup/login.html
@@ -27,26 +27,21 @@
       </header>
       <!-- HEADING END -->
 
-      <div class="signup-container">
-          <form class="buyer-signup-form">
-            <h1 class="buyer-signup-title">Welcome to the Buyer Signup Page!</h1>
-            <p class="buyer-signup-text">Please fill out all of the required information in order to become a potential buyer.</p>
+      <div class="login-container">
+          <form class="login-form">
+            <h1 class="login-title">Welcome Back!</h1>
+            <p class="login-text">We're glad you made it back! Please login below.</p>
             <div class="form-container">
             <div>
-              <label for="buyer-signup-username">Username</label>
-              <input type="text" id="buyer-signup-username" />
+              <label for="username-login">Username</label>
+              <input type="text" id="username-login" />
             </div>
             <div>
-              <label for="email-signup" class="email-signup">Email Address</label>
-              <input type="text" id="email-signup" />
-            </div>
-            <div>
-              <label for="password-signup">Password</label>
-              <input type="password" id="password-signup" />
+              <label for="password-login">Password</label>
+              <input type="password" id="password-login" />
             </div>
             <div class="signup-or-login-container">
-              <button type="submit" class="buyer-signup-button">Sign Up!</button>
-              <a href="/dashboard" class="login-link"><button class="buyer-login-button">Login Instead</button></a>
+              <a href="dashboard" class="login-link"><button class="login-button">Login Now</button></a>
             </div>
             </div>
           </form>
