placed html markup into new login.handlebars, homepage.handlebars, buyer-signup.handlebars, artist-signup.handlebars and new css styles added

--- a/public/assets/mockup/index.html
+++ b/public/assets/mockup/index.html
@@ -30,11 +30,11 @@
       <!-- MAIN CONTENT START -->
       <main>
         <!-- This container holds both columns: -->
-        <div class="content-row-container">
+        <div class="content-row-container" id="content-container">
 
           <!-- This column holds the artwork thumbnail and artist info container: -->
           <div class="artist-column">
-            <div class="feature-artist-container">
+            <div class="feature-artist-container" id="feature-content">
               <!-- This container holds the img/artwork thumbnail: -->
               <div class="artwork-container">
                 <img class="artwork-image" src="../../images/painting-sample.jpg" alt="nature oil paiting">
