--- a/public/assets/mockup/login.html
+++ b/public/assets/mockup/login.html
@@ -42,6 +42,7 @@
             </div>
             <div class="signup-or-login-container">
               <a href="dashboard" class="login-link"><button class="login-button">Login Now</button></a>
+              <a href="dashboard" class="login-link"><button class="signup-button">Signup Now</button></a>
             </div>
             </div>
           </form>
