intergrated code from group members files into mine

--- a/public/assets/mockup/artist-update-profile.html
+++ b/public/assets/mockup/artist-update-profile.html
@@ -68,6 +68,14 @@
             <label for="image">Artwork File<span class="snippet"> ( image size no larger than 400px )</span></label>
               <button type="submit" class="upload-image">Click Here To Upload Image</button> 
             </div>
+
+            <!-- SAMPLE FORM -->
+            <!-- <form ref='uploadForm' id='uploadForm' action='http://localhost:8000/upload' method='post' encType="multipart/form-data">
+              <input type="file" name="sampleFile" />
+              <input type='submit' value='Upload!' />
+            </form>    -->
+            <!-- SAMPLE FORM -->
+            
             <div class="artist-update-container">
               <a href="/login" class="update-link"><button class="artist-update-profile-button">Update My Profile</button></a>
             </div>
