--- a/public/assets/mockup/single-post.html
+++ b/public/assets/mockup/single-post.html
@@ -44,3 +44,17 @@
         </form>
       </div>
 
+      <select class="star-rating">
+      <option value="">Select a rating</option>
+      <option value="5">Excellent</option>
+      <option value="4">Very Good</option>
+      <option value="3">Average</option>
+      <option value="2">Poor</option>
+      <option value="1">Terrible</option>
+    </select>
+
+    <script src="js/star-rating.min.js"></script>
+    <script>
+      var stars = new StarRating('.star-rating');
+    </script>
+
