revised html and css -- added code for image upload

--- a/public/assets/mockup/artist-update-profile.html
+++ b/public/assets/mockup/artist-update-profile.html
@@ -66,7 +66,8 @@
             </div>
             <div class="upload-file">
             <label for="image">Artwork File<span class="snippet"> ( image size no larger than 400px )</span></label>
-              <button type="submit" class="upload-image">Click Here To Upload Image</button> 
+              <button type="submit" class="upload-image">Upload Image</button> 
+              <button type="submit" class="delete-image">Delete Image</button>
             </div>
 
             <!-- SAMPLE FORM -->
@@ -77,7 +78,9 @@
             <!-- SAMPLE FORM -->
             
             <div class="artist-update-container">
-              <a href="/login" class="update-link"><button class="artist-update-profile-button">Update My Profile</button></a>
+              <a href="/login" class="update-link"><button class="artist-update-profile-button">Update Profile</button></a>
+              <a href="/login" class="view-link"><button class="artist-view-profile-button">View Profile</button></a>
+              <a href="/login" class="delete-link"><button class="artist-delete-profile-button">Delete Profile</button></a>
             </div>
             </div>
         </form>
