--- a/public/assets/mockup/artist-profile-page.html
+++ b/public/assets/mockup/artist-profile-page.html
@@ -58,12 +58,13 @@
               </p>
             <div class="artwork-container">
               <img src="../../images/painting-sample.jpg" alt="Oil Painting">
-              <a href="/login" class="update-link"><button class="update-profile-button">Update My Profile</button></a>
+              <a href="/login" class="update-link"><button class="update-profile-button" id="update-from-profile">Update My Profile</button></a>
             </div>
         </div>
         </div>
-        <div class="comments-heading-container">
+        <div class="comments-heading-container" id="leave-comment">
         <h2 class="comments-heading" id="comments-title">Comments:</h2>
+        <a href="/login" class="leave-comment-link"><button class="leave-comment-button">Leave Comment</button></a>
         </div>
 
         <div class="profile-comments-container">
